--- a/src/css/index/company.scss
+++ b/src/css/index/company.scss
@@ -41,6 +41,10 @@
     text-align: center;
     font-family: $font-secondary;
 
+    @include media-tablet-lg {
+      margin-bottom: 20px;
+    }
+
     p:not(:last-child) {
       margin-bottom: 1rem;
 
@@ -75,8 +79,6 @@
   flex-direction: column;
 
   max-width: 70rem;
-
-  // padding-left: 3rem;
 
   @include media-tablet-lg {
     max-width: unset;
