--- a/src/pages/includes/index/mixins.pug
+++ b/src/pages/includes/index/mixins.pug
@@ -48,9 +48,9 @@ mixin featuresItem(icon, title, txt)
     h3.features__item-title= title
     p.features__item-txt= txt
 
-mixin clientsItem(img, link)
+mixin clientsItem(img, link, label)
   li.clients__item.swiper-slide
-    a.clients__link(href= link)
+    a.clients__link(href= link aria-label= label)
       img.clients__img(src=`images/index/clients/${img}`, alt="")
 
 mixin workItem(icon, num, txt)
