fix: implement fixed callback button

--- a/src/css/common/global.scss
+++ b/src/css/common/global.scss
@@ -162,6 +162,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100vh;
+
+  overflow-x: hidden;
 }
 
 .overlay {
