--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -29,5 +29,6 @@ html(lang="ru")
         +footer
       +modalForm
       #overlay.overlay
+      +callbackBtnFixed
       block scripts
         script(src='scripts/main.min.js')
