--- a/src/css/common/includes/callback.scss
+++ b/src/css/common/includes/callback.scss
@@ -17,3 +17,40 @@
     }
   }
 }
+
+.callback-fixed {
+  display: none;
+
+  position: fixed;
+
+  z-index: 8;
+
+  right: 10px;
+  bottom: 10px;
+
+  width: 60px;
+  height: 60px;
+
+  background-color: lighten($color-quaternary-beta, 1.5);
+
+  border-radius: 50%;
+
+  border: 4px solid lighten($color-quaternary-beta, 7);
+
+  transition: border-color 0.1s linear;
+
+  &:hover {
+    border-color: $color-primary-alpha;
+  }
+
+  &__icon {
+    width: 20px;
+    height: 20px;
+
+    vertical-align: middle;
+  }
+
+  &.active {
+    display: block;
+  }
+}
