--- a/src/css/index/fee.scss
+++ b/src/css/index/fee.scss
@@ -22,7 +22,19 @@
 
   &:hover {
     &::after {
-      opacity: 0.4;
+      opacity: 0;
+    }
+
+    .fee__num {
+      background: linear-gradient(
+        180deg,
+        rgb(29, 29, 29) 11.19%,
+        rgba(20, 20, 20, 0.651) 64.18%
+      );
+
+      transform: translateY(-10px);
+
+      @include num;
     }
   }
 
@@ -37,7 +49,7 @@
 
     content: '';
 
-    opacity: 0.75;
+    opacity: 0.2;
     background-color: $color-primary-beta;
 
     transition: opacity 0.1s linear;
@@ -67,6 +79,21 @@
   left: 3.7rem;
 
   max-width: 42.6rem;
+
+  &::after {
+    position: absolute;
+
+    content: '';
+
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: #ffffff;
+    filter: blur(50px);
+  }
 }
 
 .fee__num {
@@ -74,9 +101,11 @@
 
   z-index: 1;
 
+  transition: transform 0.1s linear;
+
   background: linear-gradient(
     180deg,
-    rgba(29, 29, 29, 0.7) 11.19%,
+    rgba(29, 29, 29, 1) 11.19%,
     rgba(29, 29, 29, 0) 64.18%
   );
 
@@ -86,7 +115,7 @@
 .fee__title {
   position: relative;
 
-  z-index: 1;
+  z-index: 2;
 
   font-size: 2.2rem;
   line-height: 1.4;
