implement: descrip spoiler

--- a/src/css/index/descrip.scss
+++ b/src/css/index/descrip.scss
@@ -29,6 +29,8 @@
 
   @include media-tablet-lg {
     margin-bottom: 50px;
+
+    align-items: flex-start;
   }
 }
 
@@ -103,6 +105,36 @@
   margin-bottom: 2rem;
 }
 
+.descrip__summary {
+  display: none;
+  align-items: center;
+
+  width: fit-content;
+
+  margin: 0 auto 10px;
+
+  cursor: pointer;
+  list-style: none;
+
+  span {
+    color: $color-primary-alpha;
+    border-bottom: 1px dashed $color-primary-alpha;
+    text-align: center;
+    font-size: 14px;
+
+    margin-right: 7px;
+  }
+
+  @include media-tablet-lg {
+    display: flex;
+  }
+
+  &-icon {
+    width: 10px;
+    height: 10px;
+  }
+}
+
 .descrip__txt {
   line-height: 1.5;
 
@@ -114,6 +146,10 @@
 
   @include media-tablet-lg {
     text-align: justify;
+  }
+
+  @include media-smartphone-lg {
+    text-align: left;
   }
 
   p {
