--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,6 +3,9 @@ extends common/layout
 include includes/index/mixins
 include common/footer
 
+block menu
+  +menu(true)
+
 block footer
   +footer('footer--main')
 
@@ -89,10 +92,12 @@ block content
             .company__txt
               p За моими плечами более 20 лет опыта в области бухгалтерского учета различных сфер деятельности, включая медицинские услуги, производство, оптовую торговлю и  строительство.
               p Выбранная много лет назад сфера деятельности сегодня является моей гордостью. Основывая компанию «ОлдТраффорд», я приняла для себя решение, что это будет принципиально иной уровень оказания  бухгалтерских услуг.  Это будет компания, где порядочность, репутация, качество продукта, сервис, деловая этика, финансовая ответственность, стабильность и слово руководителя  - мое слово,  будет дороже денег.
-              p Мне удалось собрать в своей команде самых лучших. Но я все так же продолжаю лично отслеживать выполнение каждого этапа выполненной работы своих сотрудников и несу личную ответственность перед Вами. Мы никогда не прячем голову в песок, не пытаемся заработать деньги любой ценой и не оставляем клиентов наедине с возникающими проблемами, мы стараемся, чтобы оказываемые нами услуги были выполнены не только на высоком уровне, но и были действительно полезны и нужны вам.
-              p Именно наши клиенты и партнеры, наш опыт и команда – это и есть основные ценности компании «ОлдТраффорд». Мы уважаем каждого из наших партнеров и заказчиков, ценим их время и работаем для общего процветания, дорожим своим именем и заботимся о своей репутации, благодаря чему смогли выстроить долговременные доверительные отношения, а также получили признание на рынке и уважение конкурентов.
-              p Я отдельно благодарю каждого клиента, хочу сказать спасибо каждому партнеру за  то, что Вы выбрали нас.  А также,  хочу пригласить новых клиентов оценить качество, оперативность, точность оказываемых ООО «ОлдТраффорд» бухгалтерских услуг, комфорт и слаженность работы всей нашей команды.
-            +icon('company__icon', 'quot')
+              details.company__details
+                +summary('company__summary')
+                p Мне удалось собрать в своей команде самых лучших. Но я все так же продолжаю лично отслеживать выполнение каждого этапа выполненной работы своих сотрудников и несу личную ответственность перед Вами. Мы никогда не прячем голову в песок, не пытаемся заработать деньги любой ценой и не оставляем клиентов наедине с возникающими проблемами, мы стараемся, чтобы оказываемые нами услуги были выполнены не только на высоком уровне, но и были действительно полезны и нужны вам.
+                p Именно наши клиенты и партнеры, наш опыт и команда – это и есть основные ценности компании «ОлдТраффорд». Мы уважаем каждого из наших партнеров и заказчиков, ценим их время и работаем для общего процветания, дорожим своим именем и заботимся о своей репутации, благодаря чему смогли выстроить долговременные доверительные отношения, а также получили признание на рынке и уважение конкурентов.
+                p Я отдельно благодарю каждого клиента, хочу сказать спасибо каждому партнеру за  то, что Вы выбрали нас.  А также,  хочу пригласить новых клиентов оценить качество, оперативность, точность оказываемых ООО «ОлдТраффорд» бухгалтерских услуг, комфорт и слаженность работы всей нашей команды.
+                +icon('company__icon', 'quot')
 
     //Features
     section.features
