--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,6 +7,7 @@
 @import 'mixins/phones';
 @import 'mixins/num';
 @import 'mixins/location';
+@import 'mixins/details-summary';
 
 @import 'common/global';
 @import 'common/header';
