--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -7,10 +7,10 @@ mixin menu(isIndexPage=false)
     - var links = outerPageLinks
   nav.header__menu
     ul
-      li: a(href= links[0] data-scroll) Главная
+      li: a(href= links[0]) Главная
       li: a(href= links[1] data-scroll) О нас
       li: a(href= links[2] data-scroll) Услуги
-      li: a(href= links[3] data-scroll) Стоимость
+      li: a(href= links[3]) Стоимость
       li: a(href= links[4] data-scroll) Контакты
 
 mixin icon(className, name)
