--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -14,7 +14,7 @@ header#header.header
     #header-bot.header__bottom.container
       .header__logo-wrapper
         .header__logo-content
-          img.header__logo(src="images/index/header/logo.svg", alt="Олд Траффорд")
+          a.header__logo-link(href="index.html"): img.header__logo(src="images/index/header/logo.svg", alt="Олд Траффорд")
           h2.header__subtitle Бухгалтерское обслуживание бизнеса и физических лиц
         button#burger.burger(aria-label="Бургер-меню")
           span
