--- a/src/pages/includes/index/mixins.pug
+++ b/src/pages/includes/index/mixins.pug
@@ -61,7 +61,7 @@ mixin clientsItem(img, link, label)
       img.clients__img(src=`images/index/clients/${img}`, alt="")
 
 mixin workItem(icon, num, txt)
-  li.work__item.swiper-slide
+  li.work__item.swiper-slide.element-fade
     .work__img
       +icon('work__icon', icon)
       span.work__num= num
