--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -32,8 +32,7 @@ block content
               p С 09:00 до 18:00
               p Понедельник - Пятница
       .map
-        .map__wrapper
-          script(async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A25f25a6f1598867f644e52d8f71141da754fd6f3a7220783fd8834063df26786&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false" rel="noreferrer")
+        #map.map__wrapper
 
     //Form
     section.contacts-form.container
