--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -161,5 +161,4 @@ block content
             h3.map__item-title Адрес:
             +location(false, true)
           a.map__link(href="contacts.html") Подробнее
-      .map__wrapper
-        script(async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2a696978720ea53ebd9e73ad180c28869d75ec04b1c62260721b4917e3c98ebd&amp;width=100%25&amp;height=100%25&amp;lang=ru_RU&amp;scroll=false" rel="noreferrer")
+      #map.map__wrapper
