--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,6 +14,7 @@
 @import 'common/footer';
 @import 'common/burger';
 @import 'common/swiper';
+@import 'common/map';
 @import 'common/includes/form';
 @import 'common/includes/callback';
 @import 'common/includes/consult';
@@ -37,7 +38,6 @@
 @import 'index/features';
 @import 'index/clients';
 @import 'index/work';
-@import 'index/map';
 
 @import 'pages/cost/cost';
 
