refactor: woff2 only

--- a/src/css/utils/fonts.scss
+++ b/src/css/utils/fonts.scss
@@ -1,10 +1,6 @@
 @font-face {
   font-family: 'Museo';
-  src: url('../../fonts/Museo300.eot');
-  src: url('../../fonts/Museo300.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Museo300.ttf') format('truetype'),
-    url('../../fonts/Museo300.woff') format('woff'),
-    url('../../fonts/Museo300.woff2') format('woff2');
+  src: url('../../fonts/Museo300.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -12,11 +8,7 @@
 
 @font-face {
   font-family: 'Museo';
-  src: url('../../fonts/Museo500.eot');
-  src: url('../../fonts/Museo500.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Museo500.ttf') format('truetype'),
-    url('../../fonts/Museo500.woff') format('woff'),
-    url('../../fonts/Museo500.woff2') format('woff2');
+  src: url('../../fonts/Museo500.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -24,11 +16,7 @@
 
 @font-face {
   font-family: 'Trajan';
-  src: url('../../fonts/Trajan400.eot');
-  src: url('../../fonts/Trajan400.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Trajan400.ttf') format('truetype'),
-    url('../../fonts/Trajan400.woff') format('woff'),
-    url('../../fonts/Trajan400.woff2') format('woff2');
+  src: url('../../fonts/Trajan400.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -36,11 +24,7 @@
 
 @font-face {
   font-family: 'Trajan';
-  src: url('../../fonts/Trajan600.eot');
-  src: url('../../fonts/Trajan600.eot?#iefix') format('embedded-opentype'),
-    url('../../fonts/Trajan600.ttf') format('truetype'),
-    url('../../fonts/Trajan600.woff') format('woff'),
-    url('../../fonts/Trajan600.woff2') format('woff2');
+  src: url('../../fonts/Trajan600.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
