--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -17,10 +17,10 @@ html(lang="ru")
 
       link(rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css")
       link(rel="stylesheet" href="css/style.min.css")
-      link(rel="preload" href="fonts/Museo300.ttf" as="font" crossorigin="anonymous")
-      link(rel="preload" href="fonts/Museo500.ttf" as="font" crossorigin="anonymous")
-      link(rel="preload" href="fonts/Trajan400.ttf" as="font" crossorigin="anonymous")
-      link(rel="preload" href="fonts/Trajan600.ttf" as="font" crossorigin="anonymous")
+      link(rel="preload" href="fonts/Museo300.woff2" as="font" crossorigin="anonymous")
+      link(rel="preload" href="fonts/Museo500.woff2" as="font" crossorigin="anonymous")
+      link(rel="preload" href="fonts/Trajan400.woff2" as="font" crossorigin="anonymous")
+      link(rel="preload" href="fonts/Trajan600.woff2" as="font" crossorigin="anonymous")
 
       script(src="https://unpkg.com/swiper/swiper-bundle.min.js")
       script(src="https://api-maps.yandex.ru/2.1/?apikey=1985392a-85b0-4ba4-9307-1b6d4c094ac8&lang=ru_RU")
