--- a/src/css/index/descrip.scss
+++ b/src/css/index/descrip.scss
@@ -99,10 +99,43 @@
 }
 
 .descrip__icon {
-  width: 7rem;
-  height: 7rem;
+  max-width: 7rem;
+  max-height: 7rem;
 
   margin-bottom: 2rem;
+
+  &--txt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    max-width: fit-content;
+    min-width: 6rem;
+    min-height: 6rem;
+
+    padding: 10px;
+
+    p {
+      position: relative;
+      top: 3px;
+
+      display: inline-block;
+    }
+
+    margin: 0 auto 2rem;
+
+    border: 2px solid $color-primary-alpha;
+    border-radius: 5px;
+
+    color: $color-primary-alpha;
+    font-weight: 500;
+
+    span {
+      font-family: $font-secondary;
+      font-size: 46px;
+      font-weight: 600;
+    }
+  }
 }
 
 .descrip__details {
@@ -116,7 +149,7 @@
 }
 
 .descrip__summary {
-  @include details-summary();
+  @include details-summary;
 }
 
 .descrip__txt {
