--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -56,7 +56,7 @@ mixin callbackBtnFixed
 mixin consult(title, subtitle)
   .container
     section.consult
-      img.consult__img(src="images/index/consult/phone.png", alt="")
+      img.consult__img(src="images/common/phone.png", alt="")
       .consult__info
         h2.consult__title= title
         h3.consult__subtitle= subtitle
