--- a/src/css/index/provider.scss
+++ b/src/css/index/provider.scss
@@ -45,8 +45,16 @@
   top: -1.75rem;
   left: 3rem;
 
+  padding: 7px;
+
   width: 35px;
   height: 35px;
+
+  fill: $color-primary-alpha;
+
+  background-color: $color-primary-beta;
+
+  border-radius: 50%;
 }
 
 .provider__txt {
