--- a/src/css/common/header.scss
+++ b/src/css/common/header.scss
@@ -396,3 +396,13 @@
     opacity: 1;
   }
 }
+
+@keyframes dropDown {
+  0% {
+    transform: translateY(-30%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
