--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -31,6 +31,20 @@ block content
             .contacts__work-time
               p С 09:00 до 18:00
               p Понедельник - Пятница
+        .contacts__info
+          .contacts__info-item
+            p Общество с ограниченной ответственностью &laquo;ОлдТраффорд&raquo; зарегистрировано Минским горисполкомом 07 марта 2014 года, регистрационный номер (УНП) 192230593
+          .contacts__info-item
+            h3.contacts__info-title Директор Малиновская Наталья Леонидовна, действует на основании Устава
+          details.contacts__details(open)
+            +summary('contacts__summary')
+            .contacts__info-item
+              h3.contacts__info-title Банковские реквизиты:
+              p р/с  BY83PJCB30120368151000000933 в ОАО &laquo;Приорбанк&raquo; ЦБУ 115, BIC PJCBBY2X
+              p адрес банка: г. Минск, ул. Кропоткина, 91
+            .contacts__info-item
+              p Профессиональная ответственность застрахована в ЗАСО &laquo;Промтрансинвест&raquo;.
+              p Страховой полис серии ПЕ № 0533493 от 04.03.2021 г.
       .map
         #map.map__wrapper
 
