--- a/src/css/common/includes/service-list.scss
+++ b/src/css/common/includes/service-list.scss
@@ -8,6 +8,7 @@
       a {
         color: $color-primary-alpha;
         border-bottom: 1px solid $color-primary-alpha;
+        font-size: 16px;
       }
     }
   }
