--- a/src/css/utils/fonts.scss
+++ b/src/css/utils/fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Museo';
-  src: url('../../fonts/Museo300.woff2') format('woff2');
+  src: url('../../fonts/Museo300.woff2') format('woff2'),
+    url('../../fonts/Museo300.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -8,7 +9,8 @@
 
 @font-face {
   font-family: 'Museo';
-  src: url('../../fonts/Museo500.woff2') format('woff2');
+  src: url('../../fonts/Museo500.woff2') format('woff2'),
+    url('../../fonts/Museo500.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -16,7 +18,8 @@
 
 @font-face {
   font-family: 'Trajan';
-  src: url('../../fonts/Trajan400.woff2') format('woff2');
+  src: url('../../fonts/Trajan400.woff2') format('woff2'),
+    url('../../fonts/Trajan400.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -24,7 +27,8 @@
 
 @font-face {
   font-family: 'Trajan';
-  src: url('../../fonts/Trajan600.woff2') format('woff2');
+  src: url('../../fonts/Trajan600.woff2') format('woff2'),
+    url('../../fonts/Trajan600.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
