feat: move phones on fixed header

--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -6,9 +6,10 @@ header#header.header
     #header-top.header__top
       block menu
         +menu
-      a.header__mail(href="mailto:buhsale@mail.ru")
-        +icon('header__icon icon', 'message')
-        p buhsale@mail.ru
+      #header-top-right.header__top-right
+        a.header__mail(href="mailto:buhsale@mail.ru")
+          +icon('header__icon icon', 'message')
+          p buhsale@mail.ru
   +decorator
   .header__bottom-wrapper
     #header-bot.header__bottom.container
