--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -25,6 +25,17 @@ html(lang="ru")
       script(src="https://unpkg.com/swiper/swiper-bundle.min.js")
       script(src="https://api-maps.yandex.ru/2.1/?apikey=1985392a-85b0-4ba4-9307-1b6d4c094ac8&lang=ru_RU")
 
+      style.
+        .intro {
+          background-image: url('images/index/intro/bg.jpg');
+        }
+
+        @media (max-width: 575.98px) {
+          .intro {
+            background-image: url('images/index/intro/bg-small.jpg');
+          }
+        }
+
       block title
         title ООО ОлдТраффорд
   body
