--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -35,7 +35,7 @@ block content
           .contacts__info-item
             p Общество с ограниченной ответственностью &laquo;ОлдТраффорд&raquo; зарегистрировано Минским горисполкомом 07 марта 2014 года, регистрационный номер (УНП) 192230593
           .contacts__info-item
-            h3.contacts__info-title Директор Малиновская Наталья Леонидовна, действует на основании Устава
+            h3.contacts__info-title Директор, Малиновская Наталья Леонидовна, действует на основании Устава
           details.contacts__details(open)
             +summary('contacts__summary')
             .contacts__info-item
