--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,7 +12,7 @@ block footer
 block content
   main
     // Intro
-    section#intro.intro(style="background-image: url(images/index/intro/bg.jpg)")
+    section#intro.intro
       .container
         .intro__inner
           h2.intro__title Профессиональные бухгалтерские услуги
@@ -45,7 +45,7 @@ block content
     //Provider
     section.provider
       .container
-        h2.provider__title Занимайтесь бизнесом, а бухгалтерией займемся мы
+        h2.provider__title Занимайтесь бизнесом, а бухгалтерией займёмся мы
         #swiper-provider.swiper-container
           ul.provider__list.swiper-wrapper
             +providerItem('Рассчитаем заработную плату и налоги Ваших сотрудников')
