--- a/src/css/common/header.scss
+++ b/src/css/common/header.scss
@@ -30,11 +30,18 @@
 
     animation: dropDown 0.15s linear;
 
+    .phones {
+      flex-direction: column;
+      p {
+        font-size: 14px;
+      }
+    }
+
     @include media-custom-mf(768px) {
       .header__menu {
         ul {
           a {
-            padding: 1.4rem 1.8rem;
+            padding: 1.8rem;
           }
         }
       }
@@ -96,9 +103,12 @@
   }
 }
 
-.header__menu {
-  width: 100%;
+.header__top-right {
+  display: flex;
+  align-items: center;
+}
 
+.header__menu {
   @include media-tablet-sm {
     border-bottom: 1px solid $color-tertiary-beta;
   }
@@ -151,6 +161,8 @@
   align-items: center;
 
   transition: color 0.05s linear;
+
+  margin-left: 15px;
 
   &:hover {
     p {
